:wrench: Fix GTK3 label alignment

--- a/resources/css/gtk3.css
+++ b/resources/css/gtk3.css
@@ -21,13 +21,3 @@ row {
 .revealer-arrow {
     margin-right: 6px;
 }
-
-/* .revealer-arrow.revealed {} */
-
-/* row {
-    padding: 10px;
-}
-
-.effect-row {
-    padding: 0px;
-} */
